--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==1.11.5
+MySQL-python==1.2.5
+django-betterforms==1.1.4
 django-enumfields==0.9.0
 django-mysql==2.1.0
 enum34==1.1.6
@@ -8,5 +10,5 @@ Pillow==4.2.1
 pip==9.0.1
 pytz==2017.2
 setuptools==28.8.0
+six==1.10.0
 wheel==0.29.0
-
